--- a/WebReader/Areas/Reader/Pages/Shared/_Layout.cshtml
+++ b/WebReader/Areas/Reader/Pages/Shared/_Layout.cshtml
@@ -4,8 +4,8 @@
 </head>
 
 <body>
-	@Html.Partial("_Header")
+	@Html.Partial("~/Areas/Reader/Pages/Shared/_Header.cshtml")
 	@RenderBody()
-	@Html.Partial("_Footer")
+	@Html.Partial("~/Areas/Reader/Pages/Shared/_Footer.cshtml")
 </body>
 </html>
