Markdown engines; basic content controllers

--- a/WebReader/Areas/Reader/Pages/ArticleView.cshtml
+++ b/WebReader/Areas/Reader/Pages/ArticleView.cshtml
@@ -1,5 +1,5 @@
 ﻿@*@page "/{**articlePath}"*@
-@model WebReader.Reader.Pages.ArticleViewModel
+@model Docomb.WebReader.Reader.Pages.ArticleViewModel
 @{
 	Layout = "~/Areas/Reader/Pages/Shared/_Layout.cshtml";
 }
