--- a/WebReader/Areas/Reader/Pages/Shared/_Layout.cshtml
+++ b/WebReader/Areas/Reader/Pages/Shared/_Layout.cshtml
@@ -1,6 +1,7 @@
 ﻿<html>
 <head>
 	<title>@(ViewBag.Title ?? Docomb.WebCore.Configurations.MainConfig.Instance.SiteName)</title>
+	<link rel="stylesheet" href="~/_resources/styles/docombReader.css" />
 </head>
 
 <body>
