--- a/WebReader/Areas/Reader/Pages/Shared/_Header.cshtml
+++ b/WebReader/Areas/Reader/Pages/Shared/_Header.cshtml
@@ -4,7 +4,24 @@
 		<nav class="workspaces">
 			@foreach (var workspace in Docomb.WebReader.SiteEnvironment.Instance?.Workspaces)
 			{
-				<a href="@workspace.FullUrl" class="@((ViewBag.CurrentWorkspacePath != null) && (workspace.UrlPath == ViewBag.CurrentWorkspacePath) ? "selected" : "")"><span>@workspace.Name</span></a>
+				<a href="@workspace.FullUrl" class="@((ViewBag.WorkspacePath != null) && (workspace.UrlPath == ViewBag.WorkspacePath) ? "selected" : "")"><span>@workspace.Name</span></a>
+			}
+		</nav>
+	}
+
+	@if (ViewBag.HasPageData == true)
+	{
+		<nav class="breadcrumbs">
+			@{ bool hasParent = false; }
+			@for (int x = 0; x <= ViewBag.PathParts?.Count; x++)
+			{
+				Docomb.ContentStorage.ContentItemSummary summary = ViewBag.Workspace?.Content?.GetItemSummary(ViewBag.PathParts?.GetRange(0, x));
+				if (summary != null)
+				{
+					if (hasParent) { <span>&gt;</span> }
+					<a href="@(ViewBag.Workspace?.FullUrl?.TrimEnd('/') + "/" + summary.Url)">@summary.Title</a>
+					hasParent = true;
+				}
 			}
 		</nav>
 	}
