--- a/WebReader/Areas/Reader/Pages/Directory.cshtml
+++ b/WebReader/Areas/Reader/Pages/Directory.cshtml
@@ -4,15 +4,16 @@
 	Layout = "~/Areas/Reader/Pages/Shared/_Layout.cshtml";
 }
 
-@{ Dictionary<string, ContentItemSummary> children = ViewBag.Workspace?.Content?.GetChildren(ViewBag.PathParts); }
-@if (children?.Count > 0)
-{
-	<ul class="directoryChildSelection">
-		@foreach (ContentItemSummary child in children.Values)
-		{
-			<li><a href="@child.FullUrl">@child.Title</a></li>
-		}
-	</ul>
-}
-
+<div class="pageContent">
+	@{ Dictionary<string, ContentItemSummary> children = ViewBag.Context?.Workspace?.Content?.GetChildren(ViewBag.Context?.PathParts); }
+	@if (children?.Count > 0)
+	{
+		<ul class="directoryChildSelection">
+			@foreach (ContentItemSummary child in children.Values)
+			{
+				<li><a href="@child.FullUrl">@child.Title</a></li>
+			}
+		</ul>
+	}
+</div>
 
