--- a/WebReader/Areas/Reader/Pages/WorkspaceList.cshtml
+++ b/WebReader/Areas/Reader/Pages/WorkspaceList.cshtml
@@ -3,11 +3,12 @@
 	Layout = "~/Areas/Reader/Pages/Shared/_Layout.cshtml";
 }
 
-<ul class="workspaceSelection">
-	@foreach (var workspace in Docomb.WebReader.SiteEnvironment.Instance?.Workspaces)
-	{
-		<li><a href="@workspace.FullUrl">@workspace.Name</a></li>
-	}
-</ul>
-
+<div class="pageContent">
+	<ul class="workspaceSelection">
+		@foreach (var workspace in Docomb.WebReader.SiteEnvironment.Instance?.Workspaces)
+		{
+			<li><a href="@workspace.FullUrl">@workspace.Name</a></li>
+		}
+	</ul>
+</div>
 
