--- a/WebReader/wwwroot/_resources/styles/docombReader.css
+++ b/WebReader/wwwroot/_resources/styles/docombReader.css
@@ -11,6 +11,9 @@ html body {
 html a {
   color: #06c; }
 
+html header {
+  background: #ddd; }
+
 html nav a {
   color: #000; }
 
@@ -21,6 +24,9 @@ html nav a {
 .dark a {
   color: #09f; }
 
+.dark header {
+  background: #444; }
+
 .dark nav a {
   color: #fff; }
 
@@ -30,6 +36,8 @@ html nav a {
     color: #fff; }
   html a {
     color: #09f; }
+  html header {
+    background: #444; }
   html nav a {
     color: #fff; }
   .light body {
@@ -37,31 +45,91 @@ html nav a {
     color: #000; }
   .light a {
     color: #06c; }
+  .light header {
+    background: #ddd; }
   .light nav a {
     color: #000; } }
 
-.workspaces {
+header .workspaces {
   padding: 5px 0;
-  text-align: center; }
-  .workspaces a {
+  text-align: center;
+  border-bottom-width: 1px;
+  border-bottom-style: solid; }
+  html header .workspaces {
+    border-bottom-color: #bbb; }
+  .dark header .workspaces {
+    border-bottom-color: #666; }
+  @media (prefers-color-scheme: dark) {
+    html header .workspaces {
+      border-bottom-color: #666; }
+    .light header .workspaces {
+      border-bottom-color: #bbb; } }
+  header .workspaces a {
     display: inline-block;
-    font-size: 16px;
-    margin: 5px 10px 3px 10px;
-    padding: 5px 10px;
+    font-size: 14px;
+    font-weight: bolder;
+    margin: 5px 5px 3px 5px;
+    padding: 5px;
     text-decoration: none; }
-  .workspaces a span {
+  header .workspaces a span {
     display: block;
     padding-bottom: 2px; }
-  .workspaces a.selected span {
+  header .workspaces a.selected span {
     padding-bottom: 0;
     border-bottom-width: 2px;
     border-bottom-style: solid; }
-    html .workspaces a.selected span {
+    html header .workspaces a.selected span {
       border-bottom-color: #000; }
-    .dark .workspaces a.selected span {
+    .dark header .workspaces a.selected span {
       border-bottom-color: #fff; }
     @media (prefers-color-scheme: dark) {
-      html .workspaces a.selected span {
+      html header .workspaces a.selected span {
         border-bottom-color: #fff; }
-      .light .workspaces a.selected span {
+      .light header .workspaces a.selected span {
         border-bottom-color: #000; } }
+  @media all and (min-width: 800px), print {
+    header .workspaces {
+      padding: 5px 15px;
+      font-size: 18px; } }
+
+header .pageTitle {
+  padding: 20px; }
+  @media not all and (min-width: 800px) {
+    header .pageTitle {
+      padding: 10px; } }
+  header .pageTitle .breadcrumbs {
+    margin: -5px;
+    position: relative;
+    z-index: 1; }
+    html header .pageTitle .breadcrumbs {
+      color: #666; }
+    .dark header .pageTitle .breadcrumbs {
+      color: #ccc; }
+    @media (prefers-color-scheme: dark) {
+      html header .pageTitle .breadcrumbs {
+        color: #ccc; }
+      .light header .pageTitle .breadcrumbs {
+        color: #666; } }
+    header .pageTitle .breadcrumbs a {
+      color: inherit;
+      display: inline-block;
+      padding: 5px;
+      text-decoration: none;
+      font-size: 14px;
+      font-weight: 500; }
+    header .pageTitle .breadcrumbs .separator {
+      display: inline-block;
+      padding: 5px 0; }
+  header .pageTitle h1 {
+    font-size: 24px;
+    font-weight: bolder;
+    margin: 0; }
+    @media all and (min-width: 800px), print {
+      header .pageTitle h1 {
+        font-size: 30px; } }
+
+.pageContent {
+  padding: 20px; }
+  @media not all and (min-width: 800px) {
+    .pageContent {
+      padding: 10px; } }
