--- a/WebReader/Areas/Reader/Pages/Shared/_Layout.cshtml
+++ b/WebReader/Areas/Reader/Pages/Shared/_Layout.cshtml
@@ -1,5 +1,8 @@
-﻿<html>
+﻿<!DOCTYPE html>
+<html>
 <head>
+	<meta charset="utf-8" />
+	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
 	<title>@(ViewBag.Title ?? Docomb.WebCore.Configurations.MainConfig.Instance.SiteName)</title>
 	<link rel="stylesheet" href="~/_resources/styles/docombReader.css" />
 </head>
