--- a/WebReader/wwwroot/_resources/styles/docombReader.scss
+++ b/WebReader/wwwroot/_resources/styles/docombReader.scss
@@ -145,40 +145,46 @@ footer { flex: 0 0 auto; }
 	@media only print { padding: 0; }
 }
 
-.pageContent, blockquote
+.pageContent, main, blockquote
 {
 	& > :first-child { margin-top: 0; }
 	& > :last-child { margin-bottom: 0; }
 }
 
+.plainTextFile { white-space: pre-wrap; }
 
 
 
-blockquote {
-	border-left: 4px solid; padding: 5px 5px 5px 15px; font-size: 18px; letter-spacing: -1px; font-style: italic;
-	@include themeMaps(("border-left-color": $menuBorderColor, "background": $menuBackgroundColor));
-}
-
-
-pre, code {
-	font-family: Consolas, Courier New, Courier, monospace; border: 1px solid; font-size: .9em;
-	@include themeMaps(("border-color": $menuBorderColor, "background": $menuBackgroundColor));
-}
-pre { padding: 10px; overflow-x: auto; }
-code { padding: 0 2px; }
-pre > pre, code > code, pre > code, code > pre { font-size: 1em; border: none; padding: 0; margin: 0; }
-
-hr { margin: 30px 0; border-top: 2px solid; border-left: none; border-right: none; border-bottom: none; @include themeMap("border-top-color", $textColorLight); }
-
-
-table
+main
 {
-	margin-top: 15px; margin-bottom: 15px; text-align: left; border-collapse: collapse; border: 1px solid;
-	/*tr:nth-child(even) { background-color: #f7f7f7; }*/
-	th, td { padding: 3px 5px; border: 1px solid; }
-	th { border-bottom-width: 2px; }
+
+
+	blockquote {
+		border-left: 4px solid; padding: 5px 5px 5px 15px; font-size: 18px; letter-spacing: -1px; font-style: italic;
+		@include themeMaps(("border-left-color": $menuBorderColor, "background": $menuBackgroundColor));
+	}
+
+
+	pre, code {
+		font-family: Consolas, Courier New, Courier, monospace; border: 1px solid; font-size: .9em;
+		@include themeMaps(("border-color": $menuBorderColor, "background": $menuBackgroundColor));
+	}
+	pre { padding: 10px; overflow-x: auto; }
+	code { padding: 0 2px; }
+	pre > pre, code > code, pre > code, code > pre { font-size: 1em; border: none; padding: 0; margin: 0; }
+
+	hr { margin: 30px 0; border-top: 2px solid; border-left: none; border-right: none; border-bottom: none; @include themeMap("border-top-color", $textColorLight); }
+
+
+	table
+	{
+		margin-top: 15px; margin-bottom: 15px; text-align: left; border-collapse: collapse; border: 1px solid;
+		tr:hover { @include themeMap("background", $menuBackgroundColor) }
+		th, td { padding: 5px 10px; border: 1px solid; vertical-align: top; }
+		th { border-bottom-width: 2px; }
+	}
+	table, table td, table th { @include themeMap("border-color", $menuBorderColor); }
+	table th { @include themeMaps(("border-bottom-color": $textColorLight, "background": $menuBackgroundColor)); }
+
+
 }
-table, table td, table th { @include themeMap("border-color", $menuBorderColor); }
-table th { @include themeMaps(("border-bottom-color": $textColorLight, "background": $menuBackgroundColor)); }
-
-
