--- a/WebReader/Areas/Reader/Pages/Shared/_Header.cshtml
+++ b/WebReader/Areas/Reader/Pages/Shared/_Header.cshtml
@@ -17,7 +17,7 @@
 				@foreach (var parent in parents)
 				{
 					<a href="@parent.FullUrl">@parent.Title</a>
-					<span class="separator">&gt;</span>
+					<span class="separator">›</span>
 				}
 			</nav>
 		}
