--- a/WebReader/wwwroot/_resources/styles/docombReader.css
+++ b/WebReader/wwwroot/_resources/styles/docombReader.css
@@ -48,7 +48,7 @@ html body {
   color: #000; }
 
 html a {
-  color: #039; }
+  color: #36c; }
 
 html header, html footer {
   background: #ddd; }
@@ -187,7 +187,7 @@ html .editor-colors .constructor {
     background: #fff;
     color: #000; }
   .light a {
-    color: #039; }
+    color: #36c; }
   .light header, .light footer {
     background: #ddd; }
   .light nav a {
