--- a/WebReader/wwwroot/_resources/styles/docombReader.scss
+++ b/WebReader/wwwroot/_resources/styles/docombReader.scss
@@ -24,7 +24,7 @@ $textColor: ( 'dark': #fff, 'light': #000 );
 $textColorLight: ( 'dark': #ccc, 'light': #666 );
 $menuBackgroundColor: ( 'dark': #444, 'light': #ddd );
 $menuBorderColor: ( 'dark': #666, 'light': #bbb );
-$linkColor: ( 'dark': #0bf, 'light': #039 );
+$linkColor: ( 'dark': #0bf, 'light': #36c );
 
 
 $codeHighlightBlack: $textColor;
