--- a/WebAdmin/wwwroot/_resources/styles/docombAdmin.scss
+++ b/WebAdmin/wwwroot/_resources/styles/docombAdmin.scss
@@ -90,3 +90,34 @@ html { @include lightPreset; }
 
 
 .adminRoot { width: 100vw; height: 100vh; }
+
+.mainNavGrid { display: flex; width: 100vw; height: 100vh;
+	> .sideBarNav { flex: 0 0 50px;
+		.sideBar { display: flex; flex-direction: column; justify-content: space-between; height: 100%; }
+		.sideBarItem {
+			.icon { margin-right: 0; }
+			.name { display: none; }
+		}
+	}
+	> .mainNav {
+		flex: 0 0 250px;
+		@include themeMap("background", $menuBackgroundColor);
+		> .toolbar { display: flex; height: 100%; width: 100%; flex-direction: column;
+			> .tablist { flex: 0 0 auto; }
+			> .tabpanel { flex: 1 1 100%; overflow: auto; }
+		}
+	}
+	> .mainNavGridContent { flex: 1 1 100%; }
+}
+
+
+.sideBarItem {
+	a { display: flex; align-items: center; padding: 10px; color: inherit; text-decoration: none;
+		&:hover {
+			@include themeMap("background", $menuBackgroundColor);
+		}
+	}
+	.icon { display: inline-block; flex: 0 0 30px; width: 30px; height: 30px; font-size: 20px; line-height: 30px; text-align: center; overflow: hidden; font-weight: bold; margin-right: 10px; }
+	.name { display: inline-block; flex: 1 1 100%; font-size: 14px; }
+}
+
